- when waiting for timer, just display Sleeping instead of Waiting
- during a fault, short press goes directly to Setup menu instead of putting
	EVSE in Sleep state
- send $WF WIFI_MODE_AP_DEFAULT instead of WIFI_MODE_AP to client on very long
	button press
- fix RAPI bug: $GF was returning FF as trip counts if zero. New max value for
	any trip count = FE
- fix documentation for $SC & $GG

vD3.8.4 SCL 20150526
- display "Disabled" when EVSE_STATE_DISABLED instead of "Stopped"
- fix bug: RAPI wasn't sending EVSE state ($ST) properly
	
vD3.8.3 SCL 20150518
- fix RAPI bug caused by code compaction in 3.8.x
- have Setup menu exit out of menus instead of back to Settings
	
vD3.8.2 SCL 20150518
- got rid of LcdDetected() .. superfluous, since LiquidTWI2 handles it
	
vD3.8.1 SCL 20150516
- fix bug in settings menu - charge & time limit should only display when EV connected
- when charge or time limit set, exit directly out of menus
- display clock icon when time limit set, lightning bolt icon when charge limit set
- code compaction
	
vD3.8.0 SCL 20150516
- added TIME_LIMIT - charge for a specified time and stop
	
vD3.7.9 SCL 20150515
- fix bug in u2a() when digits=0
- added CHARGE_LIMIT - charge to a certain kWh and then go to sleep
  kudos to AndreE for the charge limit idea.
- move all setup menus to separate "Setup" submenu. Top level menu now
  called "Settings"
	
SCL 20150513
- cleanup, move SERIALCLI to serialcli.cpp/h

v3.7.8 SCL 20150512
* promoted to official release
- Special thanks to CraigK for his hard work in making this release possible,
  with his numerous enhancements, and invaluable testing.

vD3.7.8 SCL 20150511-12
* RELEASE CANDIDATE 3 *
- added RAPI SM,GM to set/get voltmeter
- EEPROM settings for voltmeter scale/offset
- RAPI $GG now returns voltage as well
- read voltmeter in J1772EVSEController::Update() instead of on demand
	(added GetVoltage())
	
vD3.7.7 SCL 20150511
* RELEASE CANDIDATE 2 *
- added RAPI SK,GP,GU commands